upload html code

--- a/call_us_AR.html
+++ b/call_us_AR.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head> 
-    <meta charset="UTF-8">  
+    <meta charset="UTF-8"> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Master Gas - مستر جاز</title>
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="CSS/main.css">
     <link rel="stylesheet" href="CSS/AR_style.css">
 </head>
-<body>
+<body> 
     <!-- ============== Start Navbar =============== -->    
     <nav class="navbar navbar-expand-lg fixed-top" id="navbar">
         <a class="navbar-brand" href="index_AR.html">
@@ -29,7 +29,7 @@
                         <a class="nav-link" href="briefAboutCompany_AR.html">عن الشركة</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link active">
+                        <a class="nav-link">
                             خدماتنا
                         </a>
                         <div class="dropdown-menu">
@@ -55,11 +55,11 @@
                         <a class="nav-link" href="jobs_AR.html">الوظائف</a>
                     </li>
                     <!-- <li class="nav-item">
-                        <a class="nav-link" href="errorPage_AR.html">تواصل معنا</a>
+                        <a class="nav-link active" href="errorPage_AR.html">تواصل معنا</a>
                     </li> -->
 
                     <li class="nav-item dropdown connectWithUsDropDown">
-                        <a class="nav-link">
+                        <a class="nav-link active">
                             تواصل معنا
                         </a>
                         <div class="dropdown-menu">
@@ -84,7 +84,7 @@
                                 <a class="nav-link" href="briefAboutCompany_AR.html">عن الشركة</a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link active">
+                                <a class="nav-link">
                                     خدماتنا
                                 </a>
                                 <div class="dropdown-menu">
@@ -110,11 +110,11 @@
                                 <a class="nav-link" href="jobs_AR.html">الوظائف</a>
                             </li>
                             <!-- <li class="nav-item">
-                                <a class="nav-link" href="errorPage_AR.html">تواصل معنا</a>
+                                <a class="nav-link active" href="errorPage_AR.html">تواصل معنا</a>
                             </li> -->
 
                             <li class="nav-item dropdown connectWithUsDropDown">
-                                <a class="nav-link">
+                                <a class="nav-link active">
                                     تواصل معنا
                                 </a>
                                 <div class="dropdown-menu">
@@ -134,7 +134,7 @@
             <!-- select the language of the website -->
             <ul class="navbar-nav d-flex justify-content-center align-items-center flex-row"  >
                 <li class="nav-item">
-                    <a class="nav-link" href="cylinders_test_EN.html">EN</a>
+                    <a class="nav-link" href="call_us_EN.html">EN</a>
                 </li>
                 <li>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -151,87 +151,40 @@
     <!-- ============== Start pageHeader =============== -->
     <div class="pageHeader text-center">
         <div class="container">
-            <h2 data-wow-delay="0.2s" class="wow">مركز اختبار الأسطوانات</h2>
-            <p data-wow-delay="0.4s" class="wow"><a href="index_AR.html">الرئيسية</a> / <span>خدماتنا</span></p>
+            <h2 data-wow-delay="0.2s" class="wow">اتصل بنا</h2>
+            <p data-wow-delay="0.4s" class="wow"><a href="index_AR.html">الرئيسية</a> / <span>اتصل بنا</span></p>
         </div>
     </div>
     <!-- ============== End pageHeader =============== -->
-    <!-- ============== Start cylindersTestDetails =============== -->
-    <div class="cylindersTestDetails">
+    <!-- ============== Start callUsDetails =============== -->
+    <div class="callUsDetails">
         <div class="container">
-            <h2 data-wow-delay="0.2s" class="wow cylindersTestDetailsHeader">عن اختبار الأسطوانات</h2>
-            <div class="row">
-                <div class="cylindersTestContent col-lg-7 col-xl-6">
-                    <p data-wow-delay="0.2s" class="wow">هو نص شكلي لا معنى له، يتكون من أحرف متتابعة بطريقة عشوائية غير مفهومة لغوياً. يتكوف متتابعة بطريقة</p>
-                    <p data-wow-delay="0.4s" class="wow">هو نص شكلي لا معنى له، يتكون من أحرف متتابعة بطريقة عشوائية غير مفهومة لغوياً. هو نص شكلي لا معنى له،  يتكحرف متتابعة بطريقة</p>
-                    <p data-wow-delay="0.6s" class="wow">هو نص شكلي لا معنى له، يتكون منيقة عشوائية غير مفهومة لغوياً. هو نص شكلي لا معنى له،  يتكون من أحرف متتابعة بطريقة</p>
-                    <p data-wow-delay="0.8s" class="wow">هو نص شكلي لا معنى له، يتكون من أحرف متتابعة بطريقة عشوائية غير مفهومة لغوياً. هو نص شكلي لا معنى له،</p>
+            <div class="callUsData d-flex justify-content-between">
+                <div class="callUsInfo d-flex flex-column align-items-end justify-content-around col-12 col-md-10 col-lg-6">
+                    <div class="callUsInfoContent d-flex wow fadeInUp"  data-wow-delay="0.4s">
+                        <div><span>Info@email.com.eg</span></div> 
+                        <div class="d-flex justify-content-end"><i class="fas fa-envelope"></i></div> 
+                    </div>
+                    <div class="callUsInfoContent d-flex wow fadeInUp"  data-wow-delay="0.6s">
+                        <div><span>2012345678</span>+</div> 
+                        <div class="d-flex justify-content-end"><i class="fas fa-mobile-alt"></i></div>
+                    </div>
+                    <div class="callUsInfoContent d-flex wow fadeInUp"  data-wow-delay="0.8s">
+                        <div><span>225656464</span></div> 
+                        <div class="d-flex justify-content-end"><i class="fas fa-phone-alt"></i></div>
+                    </div>
+                    <div class="callUsInfoContent d-flex wow fadeInUp"  data-wow-delay="1s">
+                        <div><span>Info@email.com.eg</span></div> 
+                        <div class="d-flex justify-content-end"><i class="fas fa-map-marker-alt"></i></div>
+                    </div>
                 </div>
-                <div data-wow-delay="0.2s" class="wow cylindersTestImg col-lg-5 col-xl-6">
-                    <img src="images/carInNature.png" alt="">
+                <div class="callUsImg col-12 col-md-10 col-lg-6 wow fadeInUp"  data-wow-delay="0.4s">
+                    <img src="images/carInNatureCall.png" alt="">
                 </div>
             </div>
         </div>
     </div>
-    <!-- ============== End cylindersTestDetails =============== -->
-    <!-- ============== Start cylindersTestGallary =============== -->
-    <div class="cylindersTestGallary">
-        <div class="container">
-            <div class="allGallaryImages d-flex flex-wrap">
-                    <div class="firstSectionTop col-12 col-md-6 col-lg-4">
-                        <img src="images/carInNatureVirtical.png" alt="">
-                    </div>
-                    <div class="secondSectionTop d-flex flex-column justify-content-between col-12 col-md-6 col-lg-4">
-                        <div>
-                            <img src="images/carInNatureBox.png" alt="">
-                        </div>
-                        <div>
-                            <img src="images/carInNatureBox.png" alt="">
-                        </div> 
-                    </div>
-                    <div class="thirdSectionTop col-12 col-md-6 col-lg-4">
-                        <img src="images/carInNatureVirtical.png" alt="">
-                    </div>
-                    <div class="firstSectionBottom col-12 col-md-6 col-lg-4">
-                        <img src="images/carInNatureBox.png" alt="">
-                    </div>
-                    <div class="secondSectionBottom col-12 col-md-12 col-lg-8">
-                        <img src="images/carInNatureHorizontal.png" alt="">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- ============== End cylindersTestGallary =============== -->
-    <!-- ============== Start certificateSection =============== -->
-    <div class="certificateSection">
-        <div class="container">
-            <h2 class="certificateSectionHeader">الشهادات</h2>
-            <div class="d-flex justify-content-center">
-                <div class="col-10 certificateSlider">
-                    <div class="itemSection">
-                        <img src="images/certificate.png" alt="">
-                    </div>
-                    <div class="itemSection">
-                        <img src="images/certificate.png" alt="">
-                    </div>
-                    <div class="itemSection">
-                        <img src="images/certificate.png" alt="">
-                    </div>
-                    <div class="itemSection">
-                        <img src="images/certificate.png" alt="">
-                    </div>
-                    <div class="itemSection">
-                        <img src="images/certificate.png" alt="">
-                    </div>
-                    <div class="itemSection">
-                        <img src="images/certificate.png" alt="">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- ============== End certificateSection =============== -->
+    <!-- ============== End callUsDetails =============== -->
     <!-- ============== Start InquiriesComplaints =============== -->
     <div class="InquiriesComplaints">
         <div class="container"> 
