--- a/connect_with_us_AR.html
+++ b/connect_with_us_AR.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head> 
-    <meta charset="UTF-8">  
+    <meta charset="UTF-8"> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Master Gas - مستر جاز</title>
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="CSS/main.css">
     <link rel="stylesheet" href="CSS/AR_style.css">
 </head>
-<body>
+<body> 
     <!-- ============== Start Navbar =============== -->    
     <nav class="navbar navbar-expand-lg fixed-top" id="navbar">
         <a class="navbar-brand" href="index_AR.html">
@@ -29,7 +29,7 @@
                         <a class="nav-link" href="briefAboutCompany_AR.html">عن الشركة</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link active">
+                        <a class="nav-link">
                             خدماتنا
                         </a>
                         <div class="dropdown-menu">
@@ -55,17 +55,20 @@
                         <a class="nav-link" href="jobs_AR.html">الوظائف</a>
                     </li>
                     <!-- <li class="nav-item">
-                        <a class="nav-link" href="errorPage_AR.html">تواصل معنا</a>
+                        <a class="nav-link active" href="errorPage_AR.html">تواصل معنا</a>
                     </li> -->
 
                     <li class="nav-item dropdown connectWithUsDropDown">
-                        <a class="nav-link">
+                        <a class="nav-link active">
                             تواصل معنا
                         </a>
                         <div class="dropdown-menu">
                             <a class="dropdown-item" href="connect_with_us_AR.html">تواصل معنا</a>
                             <a class="dropdown-item" href="call_us_AR.html">اتصل بنا</a>
                         </div> 
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="hsse_AR.html">HSSE</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="hsse_AR.html">HSSE</a>
@@ -84,7 +87,7 @@
                                 <a class="nav-link" href="briefAboutCompany_AR.html">عن الشركة</a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link active">
+                                <a class="nav-link">
                                     خدماتنا
                                 </a>
                                 <div class="dropdown-menu">
@@ -110,17 +113,20 @@
                                 <a class="nav-link" href="jobs_AR.html">الوظائف</a>
                             </li>
                             <!-- <li class="nav-item">
-                                <a class="nav-link" href="errorPage_AR.html">تواصل معنا</a>
+                                <a class="nav-link active" href="errorPage_AR.html">تواصل معنا</a>
                             </li> -->
 
                             <li class="nav-item dropdown connectWithUsDropDown">
-                                <a class="nav-link">
+                                <a class="nav-link active">
                                     تواصل معنا
                                 </a>
                                 <div class="dropdown-menu">
                                     <a class="dropdown-item" href="connect_with_us_AR.html">تواصل معنا</a>
                                     <a class="dropdown-item" href="call_us_AR.html">اتصل بنا</a>
                                 </div> 
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="hsse_AR.html">HSSE</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="hsse_AR.html">HSSE</a>
@@ -134,7 +140,7 @@
             <!-- select the language of the website -->
             <ul class="navbar-nav d-flex justify-content-center align-items-center flex-row"  >
                 <li class="nav-item">
-                    <a class="nav-link" href="cylinders_test_EN.html">EN</a>
+                    <a class="nav-link" href="connect_with_us_EN.html">EN</a>
                 </li>
                 <li>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -151,87 +157,57 @@
     <!-- ============== Start pageHeader =============== -->
     <div class="pageHeader text-center">
         <div class="container">
-            <h2 data-wow-delay="0.2s" class="wow">مركز اختبار الأسطوانات</h2>
-            <p data-wow-delay="0.4s" class="wow"><a href="index_AR.html">الرئيسية</a> / <span>خدماتنا</span></p>
+            <h2 data-wow-delay="0.2s" class="wow">تواصل معنا</h2>
+            <p data-wow-delay="0.4s" class="wow"><a href="index_AR.html">الرئيسية</a> / <span>تواصل معنا</span></p>
         </div>
     </div>
     <!-- ============== End pageHeader =============== -->
-    <!-- ============== Start cylindersTestDetails =============== -->
-    <div class="cylindersTestDetails">
+    <!-- ============== Start connectWithUsDetails =============== -->
+    <div class="connectWithUsDetails">
         <div class="container">
-            <h2 data-wow-delay="0.2s" class="wow cylindersTestDetailsHeader">عن اختبار الأسطوانات</h2>
-            <div class="row">
-                <div class="cylindersTestContent col-lg-7 col-xl-6">
-                    <p data-wow-delay="0.2s" class="wow">هو نص شكلي لا معنى له، يتكون من أحرف متتابعة بطريقة عشوائية غير مفهومة لغوياً. يتكوف متتابعة بطريقة</p>
-                    <p data-wow-delay="0.4s" class="wow">هو نص شكلي لا معنى له، يتكون من أحرف متتابعة بطريقة عشوائية غير مفهومة لغوياً. هو نص شكلي لا معنى له،  يتكحرف متتابعة بطريقة</p>
-                    <p data-wow-delay="0.6s" class="wow">هو نص شكلي لا معنى له، يتكون منيقة عشوائية غير مفهومة لغوياً. هو نص شكلي لا معنى له،  يتكون من أحرف متتابعة بطريقة</p>
-                    <p data-wow-delay="0.8s" class="wow">هو نص شكلي لا معنى له، يتكون من أحرف متتابعة بطريقة عشوائية غير مفهومة لغوياً. هو نص شكلي لا معنى له،</p>
-                </div>
-                <div data-wow-delay="0.2s" class="wow cylindersTestImg col-lg-5 col-xl-6">
-                    <img src="images/carInNature.png" alt="">
+            <h2 data-wow-delay="0.2s" class="wow fadeInUp connectWithUsDetailsHeader">ابق علي تواصل معنا</h2>
+            <div class="connectWithUsData d-flex flex-column-reverse flex-lg-row justify-content-between">
+                <form method="" action="" class="col-12 col-lg-6 col-xl-5">
+                    <div data-wow-delay="0.3s" class="wow fadeInUp form-group col-12">
+                        <input type="text" class="form-control" placeholder="الاسم">
+                    </div>
+                    <div data-wow-delay="0.4s" class="wow fadeInUp form-group col-12">
+                        <input type="text" class="form-control" placeholder="الموبايل">
+                    </div>
+                    <div data-wow-delay="0.5s" class="wow fadeInUp form-group col-12">
+                        <input type="text" class="form-control" placeholder="العنوان">
+                    </div>
+                    <div data-wow-delay="0.6s" class="wow fadeInUp form-group col-12">
+                        <input type="email" class="form-control" placeholder="الايميل">
+                    </div>
+                    <div data-wow-delay="0.7s" class="wow fadeInUp form-group col-12">
+                        <input type="text" class="form-control" placeholder="عنوان الموضوع">
+                    </div>
+                    <div data-wow-delay="0.8s" class="wow fadeInUp form-group col-12">
+                        <textarea name="" class="form-control" placeholder="الموضوع"></textarea>
+                    </div>
+                    <label data-wow-delay="0.9s" class="wow fadeInUp labelHeader">وسيلة التواصل المناسبة</label>
+                    <div data-wow-delay="1s" class="wow fadeInUp radioBtnsSec d-flex align-items-center form-group col-12">
+                        <label class="d-flex align-items-center">الايميل
+                            <input type="radio" name="radio">
+                            <span class="checkmark"></span>
+                        </label>
+                        <label class="d-flex align-items-center">الموبايل
+                            <input type="radio" name="radio">
+                            <span class="checkmark"></span>
+                        </label>
+                    </div>
+                    <div class="btnContainer d-flex justify-content-center">
+                        <button type="submit" class="btn">إرسال</button>
+                    </div>
+                </form>
+                <div data-wow-delay="0.1s" class="wow fadeInUp connectImg col-12 col-lg-6 col-xl-6">
+                    <img src="images/carInNatureBox.png" alt="">
                 </div>
             </div>
         </div>
     </div>
-    <!-- ============== End cylindersTestDetails =============== -->
-    <!-- ============== Start cylindersTestGallary =============== -->
-    <div class="cylindersTestGallary">
-        <div class="container">
-            <div class="allGallaryImages d-flex flex-wrap">
-                    <div class="firstSectionTop col-12 col-md-6 col-lg-4">
-                        <img src="images/carInNatureVirtical.png" alt="">
-                    </div>
-                    <div class="secondSectionTop d-flex flex-column justify-content-between col-12 col-md-6 col-lg-4">
-                        <div>
-                            <img src="images/carInNatureBox.png" alt="">
-                        </div>
-                        <div>
-                            <img src="images/carInNatureBox.png" alt="">
-                        </div> 
-                    </div>
-                    <div class="thirdSectionTop col-12 col-md-6 col-lg-4">
-                        <img src="images/carInNatureVirtical.png" alt="">
-                    </div>
-                    <div class="firstSectionBottom col-12 col-md-6 col-lg-4">
-                        <img src="images/carInNatureBox.png" alt="">
-                    </div>
-                    <div class="secondSectionBottom col-12 col-md-12 col-lg-8">
-                        <img src="images/carInNatureHorizontal.png" alt="">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- ============== End cylindersTestGallary =============== -->
-    <!-- ============== Start certificateSection =============== -->
-    <div class="certificateSection">
-        <div class="container">
-            <h2 class="certificateSectionHeader">الشهادات</h2>
-            <div class="d-flex justify-content-center">
-                <div class="col-10 certificateSlider">
-                    <div class="itemSection">
-                        <img src="images/certificate.png" alt="">
-                    </div>
-                    <div class="itemSection">
-                        <img src="images/certificate.png" alt="">
-                    </div>
-                    <div class="itemSection">
-                        <img src="images/certificate.png" alt="">
-                    </div>
-                    <div class="itemSection">
-                        <img src="images/certificate.png" alt="">
-                    </div>
-                    <div class="itemSection">
-                        <img src="images/certificate.png" alt="">
-                    </div>
-                    <div class="itemSection">
-                        <img src="images/certificate.png" alt="">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- ============== End certificateSection =============== -->
+    <!-- ============== End connectWithUsDetails =============== -->
     <!-- ============== Start InquiriesComplaints =============== -->
     <div class="InquiriesComplaints">
         <div class="container"> 
@@ -250,7 +226,7 @@
                     <a href="#">إرسل طلبك</a>
                 </div>
             </div>
-        </div>
+        </div> 
     </div>
     <!-- ============== End InquiriesComplaints =============== -->
     <!-- ============== Start footer =============== -->
