--- a/connect_with_us_EN.html
+++ b/connect_with_us_EN.html
@@ -59,7 +59,7 @@
                     </li> -->
 
                     <li class="nav-item dropdown connectWithUsDropDown">
-                        <a class="nav-link">
+                        <a class="nav-link active">
                             Contact Us
                         </a>
                         <div class="dropdown-menu">
@@ -68,7 +68,7 @@
                         </div> 
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="hsse_EN.html">HSSE</a>
+                        <a class="nav-link" href="hsse_EN.html">HSSE</a>
                     </li>
                 </ul>
             </div>
@@ -97,7 +97,7 @@
                             <li class="nav-item dropdown ourPartinersDropDown">
                                 <a class="nav-link">
                                     Partiners
-                                </a> 
+                                </a>
                                 <div class="dropdown-menu">
                                     <a class="dropdown-item" href="our_clients_EN.html">Our clients</a>
                                     <a class="dropdown-item" href="our_partners_EN.html">Our strategic partners</a>
@@ -110,11 +110,11 @@
                                 <a class="nav-link" href="jobs_EN.html">Jobs</a>
                             </li>
                             <!-- <li class="nav-item">
-                                <a class="nav-link" href="errorPage_EN.html">Contact Us</a>
+                                <a class="nav-link active" href="errorPage_EN.html">Contact Us</a>
                             </li> -->
 
                             <li class="nav-item dropdown connectWithUsDropDown">
-                                <a class="nav-link">
+                                <a class="nav-link active">
                                     Contact Us
                                 </a>
                                 <div class="dropdown-menu">
@@ -123,7 +123,7 @@
                                 </div> 
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" href="hsse_EN.html">HSSE</a>
+                                <a class="nav-link" href="hsse_EN.html">HSSE</a>
                             </li>
                         </ul>
                     </div>
@@ -134,7 +134,7 @@
             <!-- select the language of the website -->
             <ul class="navbar-nav d-flex justify-content-center align-items-center flex-row"  >
                 <li class="nav-item">
-                    <a class="nav-link" href="hsse_AR.html">AR</a>
+                    <a class="nav-link" href="connect_with_us_AR.html">AR</a>
                 </li>
                 <li>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -151,58 +151,57 @@
     <!-- ============== Start pageHeader =============== -->
     <div class="pageHeader text-center">
         <div class="container">
-            <h2 data-wow-delay="0.2s" class="wow">HSSE</h2>
-            <p data-wow-delay="0.4s" class="wow"><a href="index_EN.html">Main</a> / <span>HSSE</span></p>
+            <h2 data-wow-delay="0.2s" class="wow">Connect with us</h2>
+            <p data-wow-delay="0.4s" class="wow"><a href="index_EN.html">Main</a> / <span>Connect with us</span></p>
         </div>
     </div>
     <!-- ============== End pageHeader =============== -->
-    <!-- ============== Start aboutHsse =============== -->
-    <div class="aboutHsse"> 
+    <!-- ============== Start connectWithUsDetails =============== -->
+    <div class="connectWithUsDetails">
         <div class="container">
-            <h2 data-wow-delay="0.2s" class="wow aboutHsseHeader">About <span>HSSE</span></h2>
-            <div class="row">
-                <div data-wow-delay="0.4s" class="wow aboutHsseContent col-lg-7 col-xl-6">
-                    <p>It is a dummy text that is meaningless, consisting of randomly incomprehensible linguistically incomprehensible letters. It is a meaningless formal text, consisting of sequential characters in a random, incomprehensible manner, from which it is the display of the forms of texts</p>
-                    <p>It is a dummy text that is meaningless, consisting of randomly incomprehensible linguistically incomprehensible letters. It is a meaningless formal text, consisting of sequential characters in a random, incomprehensible manner, from which it is the display of the forms of texts</p>
-                    <p>It is a dummy text that is meaningless, consisting of randomly incomprehensible linguistically incomprehensible letters. It is a meaningless formal text, consisting of sequential characters in a random, incomprehensible manner, from which it is the display of the forms of texts</p>
-                </div>
-                <div data-wow-delay="0.4s" class="wow aboutHsseImg col-lg-5 col-xl-6">
-                    <img src="images/petrolMan.png" alt="">
+            <h2 data-wow-delay="0.2s" class="wow fadeInUp connectWithUsDetailsHeader">Keep in contact with us</h2>
+            <div class="connectWithUsData d-flex flex-column-reverse flex-lg-row justify-content-between">
+                <form method="" action="" class="col-12 col-lg-6 col-xl-5">
+                    <div data-wow-delay="0.3s" class="wow fadeInUp form-group col-12">
+                        <input type="text" class="form-control" placeholder="Name">
+                    </div>
+                    <div data-wow-delay="0.4s" class="wow fadeInUp form-group col-12">
+                        <input type="text" class="form-control" placeholder="Mobile">
+                    </div>
+                    <div data-wow-delay="0.5s" class="wow fadeInUp form-group col-12">
+                        <input type="text" class="form-control" placeholder="Address">
+                    </div>
+                    <div data-wow-delay="0.6s" class="wow fadeInUp form-group col-12">
+                        <input type="email" class="form-control" placeholder="Email">
+                    </div>
+                    <div data-wow-delay="0.7s" class="wow fadeInUp form-group col-12">
+                        <input type="text" class="form-control" placeholder="Title of the topic">
+                    </div>
+                    <div data-wow-delay="0.8s" class="wow fadeInUp form-group col-12">
+                        <textarea name="" class="form-control" placeholder="The topic"></textarea>
+                    </div>
+                    <label data-wow-delay="0.9s" class="wow fadeInUp labelHeader">The appropriate medium of communication</label>
+                    <div data-wow-delay="1s" class="wow fadeInUp radioBtnsSec d-flex align-items-center form-group col-12">
+                        <label class="d-flex align-items-center">Email
+                            <input type="radio" name="radio">
+                            <span class="checkmark"></span>
+                        </label>
+                        <label class="d-flex align-items-center">Mobile
+                            <input type="radio" name="radio">
+                            <span class="checkmark"></span>
+                        </label>
+                    </div>
+                    <div class="btnContainer d-flex justify-content-center">
+                        <button type="submit" class="btn">Send</button>
+                    </div>
+                </form>
+                <div data-wow-delay="0.1s" class="wow fadeInUp connectImg col-12 col-lg-6 col-xl-6">
+                    <img src="images/carInNatureBox.png" alt="">
                 </div>
             </div>
         </div>
     </div>
-    <!-- ============== End aboutHsse =============== -->
-    <!-- ============== Start safetyConditions =============== -->
-    <div class="safetyConditions">
-        <div class="container">
-            <div class="row safetyConditionsAll">
-                <div data-wow-delay="0.2s" class="wow safetyConditionsImg col-lg-4 col-xl-4">
-                    <img src="images/pertrolMan2.png" alt="">
-                </div>
-                <div class="safetyConditionsContent col-lg-8 col-xl-8">
-                    <h2 data-wow-delay="0.3s" class="wow safetyConditionsHeader">Occupational Safety Conditions</h2>
-                    <div data-wow-delay="0.4s" class="wow conditionSections d-flex align-items-center">
-                        <span>01</span>
-                        <p>It is a dummy text that is meaningless, consisting of randomly incomprehensible linguistically incomprehensible letters. It is a meaningless formal text, consisting of sequential characters in a random, incomprehensible manner, from which it is the display of the forms of texts</p>
-                    </div>
-                    <div data-wow-delay="0.6s" class="wow conditionSections d-flex align-items-center">
-                        <span>02</span>
-                        <p>It is a dummy text that is meaningless, consisting of randomly incomprehensible linguistically incomprehensible letters. It is a meaningless formal text, consisting of sequential characters in a random, incomprehensible manner, from which it is the display of the forms of texts</p>
-                    </div>
-                    <div data-wow-delay="0.8s" class="wow conditionSections d-flex align-items-center">
-                        <span>03</span>
-                        <p>It is a dummy text that is meaningless, consisting of randomly incomprehensible linguistically incomprehensible letters. It is a meaningless formal text, consisting of sequential characters in a random, incomprehensible manner, from which it is the display of the forms of texts</p>
-                    </div>
-                    <div data-wow-delay="1s" class="wow conditionSections d-flex align-items-center">
-                        <span>04</span>
-                        <p>It is a dummy text that is meaningless, consisting of randomly incomprehensible linguistically incomprehensible letters. It is a meaningless formal text, consisting of sequential characters in a random, incomprehensible manner, from which it is the display of the forms of texts</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- ============== End safetyConditions =============== -->
+    <!-- ============== End connectWithUsDetails =============== -->
     <!-- ============== Start InquiriesComplaints =============== -->
     <div class="InquiriesComplaints">
         <div class="container">
@@ -221,7 +220,7 @@
                     <a href="#">Send request</a>
                 </div>
             </div>
-        </div>
+        </div> 
     </div>
     <!-- ============== End InquiriesComplaints =============== -->
     <!-- ============== Start footer =============== -->
