--- a/our_clients_AR.html
+++ b/our_clients_AR.html
@@ -54,8 +54,18 @@
                     <li class="nav-item">
                         <a class="nav-link" href="jobs_AR.html">الوظائف</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="errorPage_AR.html">تواصل معنا</a>
+                    </li> -->
+
+                    <li class="nav-item dropdown connectWithUsDropDown">
+                        <a class="nav-link">
+                            تواصل معنا
+                        </a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="connect_with_us_AR.html">تواصل معنا</a>
+                            <a class="dropdown-item" href="call_us_AR.html">اتصل بنا</a>
+                        </div> 
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="hsse_AR.html">HSSE</a>
@@ -99,8 +109,18 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="jobs_AR.html">الوظائف</a>
                             </li>
-                            <li class="nav-item">
+                            <!-- <li class="nav-item">
                                 <a class="nav-link" href="errorPage_AR.html">تواصل معنا</a>
+                            </li> -->
+
+                            <li class="nav-item dropdown connectWithUsDropDown">
+                                <a class="nav-link">
+                                    تواصل معنا
+                                </a>
+                                <div class="dropdown-menu">
+                                    <a class="dropdown-item" href="connect_with_us_AR.html">تواصل معنا</a>
+                                    <a class="dropdown-item" href="call_us_AR.html">اتصل بنا</a>
+                                </div> 
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="hsse_AR.html">HSSE</a>
@@ -184,7 +204,7 @@
     <div class="InquiriesComplaints">
         <div class="container"> 
             <div class="d-flex flex-column flex-lg-row align-items-lg-center justify-content-lg-between">
-                <div data-wow-delay="0.4s" class="wow InquiriesComplaintsContent d-flex">
+                <div data-wow-delay="0.4s" class="wow InquiriesComplaintsContent d-flex col-lg-8">
                     <div>
                         <i class="fas fa-headset"></i>
                     </div>
@@ -193,7 +213,7 @@
                         <p>إتصل بنا أو اترك رسالة و سيقوم أحد ممثلي خدمة العملاء بالرد عليك فى أقرب وقت</p>
                     </div>
                 </div>
-                <div data-wow-delay="0.4s" class="wow InquiriesComplaintsBtns">
+                <div data-wow-delay="0.4s" class="wow InquiriesComplaintsBtns col-lg-4">
                     <a href="#">إتصل بنا</a>
                     <a href="#">إرسل طلبك</a>
                 </div>
