--- a/index_EN.html
+++ b/index_EN.html
@@ -54,8 +54,18 @@
                     <li class="nav-item">
                         <a class="nav-link" href="jobs_EN.html">Jobs</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="errorPage_EN.html">Contact Us</a>
+                    </li> -->
+
+                    <li class="nav-item dropdown connectWithUsDropDown">
+                        <a class="nav-link">
+                            Contact Us
+                        </a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="connect_with_us_EN.html">Contact Us</a>
+                            <a class="dropdown-item" href="call_us_EN.html">Call Us</a>
+                        </div> 
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="hsse_EN.html">HSSE</a>
@@ -99,8 +109,18 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="jobs_EN.html">Jobs</a>
                             </li>
-                            <li class="nav-item">
+                            <!-- <li class="nav-item">
                                 <a class="nav-link" href="errorPage_EN.html">Contact Us</a>
+                            </li> -->
+
+                            <li class="nav-item dropdown connectWithUsDropDown">
+                                <a class="nav-link">
+                                    Contact Us
+                                </a>
+                                <div class="dropdown-menu">
+                                    <a class="dropdown-item" href="connect_with_us_EN.html">Contact Us</a>
+                                    <a class="dropdown-item" href="call_us_EN.html">Call Us</a>
+                                </div> 
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="hsse_EN.html">HSSE</a>
@@ -604,8 +624,8 @@
     <div class="InquiriesComplaints">
         <div class="container">
             <div class="d-flex flex-column flex-lg-row align-items-lg-center justify-content-lg-between">
-                <div data-wow-delay="0.4s" class="wow InquiriesComplaintsContent d-flex">
-                    <div>
+                <div data-wow-delay="0.4s" class="wow InquiriesComplaintsContent d-flex col-lg-8">
+                    <div> 
                         <i class="fas fa-headset"></i>
                     </div>
                     <div class="textContent">
@@ -613,9 +633,9 @@
                         <p>Call us or leave a message and a customer service representative will get back to you as soon as possible</p>
                     </div>
                 </div> 
-                <div data-wow-delay="0.4s" class="wow InquiriesComplaintsBtns d-flex flex-wrap">
+                <div data-wow-delay="0.4s" class="wow InquiriesComplaintsBtns col-lg-4">
                     <a href="#">Call us</a>
-                    <a href="#">Submit your request</a>
+                    <a href="#">Send request</a>
                 </div>
             </div>
         </div>
