--- a/news_AR.html
+++ b/news_AR.html
@@ -54,8 +54,18 @@
                     <li class="nav-item">
                         <a class="nav-link" href="jobs_AR.html">الوظائف</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="errorPage_AR.html">تواصل معنا</a>
+                    </li> -->
+
+                    <li class="nav-item dropdown connectWithUsDropDown">
+                        <a class="nav-link">
+                            تواصل معنا
+                        </a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="connect_with_us_AR.html">تواصل معنا</a>
+                            <a class="dropdown-item" href="call_us_AR.html">اتصل بنا</a>
+                        </div> 
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="hsse_AR.html">HSSE</a>
@@ -99,13 +109,23 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="jobs_AR.html">الوظائف</a>
                             </li>
-                            <li class="nav-item">
+                            <!-- <li class="nav-item">
                                 <a class="nav-link" href="errorPage_AR.html">تواصل معنا</a>
+                            </li> -->
+
+                            <li class="nav-item dropdown connectWithUsDropDown">
+                                <a class="nav-link">
+                                    تواصل معنا
+                                </a>
+                                <div class="dropdown-menu">
+                                    <a class="dropdown-item" href="connect_with_us_AR.html">تواصل معنا</a>
+                                    <a class="dropdown-item" href="call_us_AR.html">اتصل بنا</a>
+                                </div> 
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="hsse_AR.html">HSSE</a>
                             </li>
-                        </ul>
+                        </ul> 
                     </div>
                 </div>
             </div>
@@ -252,7 +272,7 @@
                 <div class="oldNewsSlider">
                     <div data-wow-delay="0.4s" class="wow fadeInDown sliderSection">
                         <div class="newsYear text-center">
-                            <span>2021</span>
+                            <span>2020</span>
                         </div>
                         <div class="newsHeader text-center">
                             <h2>هو نص شكلي لا معنى له</h2>
@@ -272,7 +292,7 @@
                     </div>
                     <div data-wow-delay="0.4s" class="wow fadeInUp sliderSection">
                         <div class="newsYear text-center">
-                            <span>2021</span>
+                            <span>2020</span>
                         </div>
                         <div class="newsHeader text-center">
                             <h2>هو نص شكلي لا معنى له</h2>
@@ -292,7 +312,7 @@
                     </div>
                     <div data-wow-delay="0.4s" class="wow fadeInDown sliderSection">
                         <div class="newsYear text-center">
-                            <span>2021</span>
+                            <span>2020</span>
                         </div>
                         <div class="newsHeader text-center">
                             <h2>هو نص شكلي لا معنى له</h2>
@@ -312,7 +332,7 @@
                     </div>
                     <div data-wow-delay="0.4s" class="wow fadeInDown sliderSection">
                         <div class="newsYear text-center">
-                            <span>2021</span>
+                            <span>2020</span>
                         </div>
                         <div class="newsHeader text-center">
                             <h2>هو نص شكلي لا معنى له</h2>
@@ -332,7 +352,7 @@
                     </div>
                     <div data-wow-delay="0.4s" class="wow fadeInUp sliderSection">
                         <div class="newsYear text-center">
-                            <span>2021</span>
+                            <span>2020</span>
                         </div>
                         <div class="newsHeader text-center">
                             <h2>هو نص شكلي لا معنى له</h2>
@@ -360,7 +380,7 @@
                 <div class="oldestNewsSlider">
                     <div data-wow-delay="0.4s" class="wow fadeInDown sliderSection">
                         <div class="newsYear text-center">
-                            <span>2021</span>
+                            <span>2019</span>
                         </div>
                         <div class="newsHeader text-center">
                             <h2>هو نص شكلي لا معنى له</h2>
@@ -380,7 +400,7 @@
                     </div>
                     <div data-wow-delay="0.4s" class="wow fadeInUp sliderSection">
                         <div class="newsYear text-center">
-                            <span>2021</span>
+                            <span>2019</span>
                         </div>
                         <div class="newsHeader text-center">
                             <h2>هو نص شكلي لا معنى له</h2>
@@ -400,7 +420,7 @@
                     </div>
                     <div data-wow-delay="0.4s" class="wow fadeInDown sliderSection">
                         <div class="newsYear text-center">
-                            <span>2021</span>
+                            <span>2019</span>
                         </div>
                         <div class="newsHeader text-center">
                             <h2>هو نص شكلي لا معنى له</h2>
@@ -420,7 +440,7 @@
                     </div>
                     <div data-wow-delay="0.4s" class="wow fadeInUp sliderSection">
                         <div class="newsYear text-center">
-                            <span>2021</span>
+                            <span>2019</span>
                         </div>
                         <div class="newsHeader text-center">
                             <h2>هو نص شكلي لا معنى له</h2>
@@ -440,7 +460,7 @@
                     </div>
                     <div data-wow-delay="0.4s" class="wow fadeInUp sliderSection">
                         <div class="newsYear text-center">
-                            <span>2021</span>
+                            <span>2019</span>
                         </div>
                         <div class="newsHeader text-center">
                             <h2>هو نص شكلي لا معنى له</h2>
@@ -467,7 +487,7 @@
     <div class="InquiriesComplaints">
         <div class="container"> 
             <div class="d-flex flex-column flex-lg-row align-items-lg-center justify-content-lg-between">
-                <div data-wow-delay="0.4s" class="wow InquiriesComplaintsContent d-flex">
+                <div data-wow-delay="0.4s" class="wow InquiriesComplaintsContent d-flex col-lg-8">
                     <div>
                         <i class="fas fa-headset"></i>
                     </div>
@@ -476,7 +496,7 @@
                         <p>إتصل بنا أو اترك رسالة و سيقوم أحد ممثلي خدمة العملاء بالرد عليك فى أقرب وقت</p>
                     </div>
                 </div>
-                <div data-wow-delay="0.4s" class="wow InquiriesComplaintsBtns">
+                <div data-wow-delay="0.4s" class="wow InquiriesComplaintsBtns col-lg-4">
                     <a href="#">إتصل بنا</a>
                     <a href="#">إرسل طلبك</a>
                 </div>
