--- a/news_EN.html
+++ b/news_EN.html
@@ -54,8 +54,18 @@
                     <li class="nav-item">
                         <a class="nav-link" href="jobs_EN.html">Jobs</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="errorPage_EN.html">Contact Us</a>
+                    </li> -->
+
+                    <li class="nav-item dropdown connectWithUsDropDown">
+                        <a class="nav-link">
+                            Contact Us
+                        </a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="connect_with_us_EN.html">Contact Us</a>
+                            <a class="dropdown-item" href="call_us_EN.html">Call Us</a>
+                        </div> 
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="hsse_EN.html">HSSE</a>
@@ -99,8 +109,18 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="jobs_EN.html">Jobs</a>
                             </li>
-                            <li class="nav-item">
+                            <!-- <li class="nav-item">
                                 <a class="nav-link" href="errorPage_EN.html">Contact Us</a>
+                            </li> -->
+
+                            <li class="nav-item dropdown connectWithUsDropDown">
+                                <a class="nav-link">
+                                    Contact Us
+                                </a>
+                                <div class="dropdown-menu">
+                                    <a class="dropdown-item" href="connect_with_us_EN.html">Contact Us</a>
+                                    <a class="dropdown-item" href="call_us_EN.html">Call Us</a>
+                                </div> 
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="hsse_EN.html">HSSE</a>
@@ -242,7 +262,7 @@
                 <div class="oldNewsSlider">
                     <div data-wow-delay="0.4s" class="wow fadeInUp sliderSection">
                         <div class="newsYear text-center">
-                            <span>2021</span>
+                            <span>2020</span>
                         </div>
                         <div class="newsHeader text-center">
                             <h2>It is a dummy text that has no meaning</h2>
@@ -260,7 +280,7 @@
                     </div>
                     <div data-wow-delay="0.4s" class="wow fadeInDown sliderSection">
                         <div class="newsYear text-center">
-                            <span>2021</span>
+                            <span>2020</span>
                         </div>
                         <div class="newsHeader text-center">
                             <h2>It is a dummy text that has no meaning</h2>
@@ -278,7 +298,7 @@
                     </div>
                     <div data-wow-delay="0.4s" class="wow fadeInUp sliderSection">
                         <div class="newsYear text-center">
-                            <span>2021</span>
+                            <span>2020</span>
                         </div>
                         <div class="newsHeader text-center">
                             <h2>It is a dummy text that has no meaning</h2>
@@ -296,7 +316,7 @@
                     </div>
                     <div data-wow-delay="0.4s" class="wow fadeInDown sliderSection">
                         <div class="newsYear text-center">
-                            <span>2021</span>
+                            <span>2020</span>
                         </div>
                         <div class="newsHeader text-center">
                             <h2>It is a dummy text that has no meaning</h2>
@@ -314,7 +334,7 @@
                     </div>
                     <div data-wow-delay="0.4s" class="wow fadeInUp sliderSection">
                         <div class="newsYear text-center">
-                            <span>2021</span>
+                            <span>2020</span>
                         </div>
                         <div class="newsHeader text-center">
                             <h2>It is a dummy text that has no meaning</h2>
@@ -340,7 +360,7 @@
                 <div class="oldestNewsSlider">
                     <div data-wow-delay="0.4s" class="wow fadeInUp sliderSection">
                         <div class="newsYear text-center">
-                            <span>2021</span>
+                            <span>2019</span>
                         </div>
                         <div class="newsHeader text-center">
                             <h2>It is a dummy text that has no meaning</h2>
@@ -358,7 +378,7 @@
                     </div>
                     <div data-wow-delay="0.4s" class="wow fadeInDown sliderSection">
                         <div class="newsYear text-center">
-                            <span>2021</span>
+                            <span>2019</span>
                         </div>
                         <div class="newsHeader text-center">
                             <h2>It is a dummy text that has no meaning</h2>
@@ -376,7 +396,7 @@
                     </div>
                     <div data-wow-delay="0.4s" class="wow fadeInUp sliderSection">
                         <div class="newsYear text-center">
-                            <span>2021</span>
+                            <span>2019</span>
                         </div>
                         <div class="newsHeader text-center">
                             <h2>It is a dummy text that has no meaning</h2>
@@ -394,7 +414,7 @@
                     </div>
                     <div data-wow-delay="0.4s" class="wow fadeInDown sliderSection">
                         <div class="newsYear text-center">
-                            <span>2021</span>
+                            <span>2019</span>
                         </div>
                         <div class="newsHeader text-center">
                             <h2>It is a dummy text that has no meaning</h2>
@@ -412,7 +432,7 @@
                     </div>
                     <div data-wow-delay="0.4s" class="wow fadeInUp sliderSection">
                         <div class="newsYear text-center">
-                            <span>2021</span>
+                            <span>2019</span>
                         </div>
                         <div class="newsHeader text-center">
                             <h2>It is a dummy text that has no meaning</h2>
@@ -437,8 +457,8 @@
     <div class="InquiriesComplaints">
         <div class="container">
             <div class="d-flex flex-column flex-lg-row align-items-lg-center justify-content-lg-between">
-                <div data-wow-delay="0.4s" class="wow InquiriesComplaintsContent d-flex">
-                    <div>
+                <div data-wow-delay="0.4s" class="wow InquiriesComplaintsContent d-flex col-lg-8">
+                    <div> 
                         <i class="fas fa-headset"></i>
                     </div>
                     <div class="textContent">
@@ -446,9 +466,9 @@
                         <p>Call us or leave a message and a customer service representative will get back to you as soon as possible</p>
                     </div>
                 </div> 
-                <div data-wow-delay="0.4s" class="wow InquiriesComplaintsBtns d-flex flex-wrap">
+                <div data-wow-delay="0.4s" class="wow InquiriesComplaintsBtns col-lg-4">
                     <a href="#">Call us</a>
-                    <a href="#">Submit your request</a>
+                    <a href="#">Send request</a>
                 </div>
             </div>
         </div>
